--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,13 @@ yarn-error.log*
 
 # turbo
 .turbo
+
+
+# Yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
