--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,19 +1,28 @@
 {
   "name": "ui",
   "version": "0.0.0",
-  "main": "./index.tsx",
-  "types": "./index.tsx",
+  "exports": {
+    ".": "./index.tsx",
+    "./Form": "./Form/index.tsx"
+  },
   "license": "MIT",
   "scripts": {
     "lint": "eslint *.ts*"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "autoprefixer": "^10.4.12",
     "eslint": "^7.32.0",
     "eslint-config-custom": "*",
+    "postcss": "^8.4.17",
     "react": "^18.2.0",
+    "tailwindcss": "^3.1.8",
     "tsconfig": "*",
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "clsx": "^1.2.1"
   }
 }
